force-app/main/default/objects/Apttus__SearchFilter__c/Apttus__SearchFilter__c.object-meta.xml
<CustomObject>
    <description>Represents a search filter</description>
    <label>Search Filter (Comply)</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filters (Comply)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>