force-app/main/default/objects/Apttus__SearchFilter__c/fields/Apttus__BusinessObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__BusinessObject__c</fullName>
    <description>The business object which provides the context for the filter</description>
    <inlineHelpText>The business object which provides the context for the filter</inlineHelpText>
    <label>Business Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apttus__AgreementLineItem__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>