force-app/main/default/objects/Apttus__SearchFilter__c/fields/Apttus__Datetime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Datetime__c</fullName>
    <description>Search datetime</description>
    <label>Datetime</label>
    <type>DateTime</type>
</CustomField>