force-app/main/default/objects/Apttus__SearchFilter__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>The description for the filter</description>
    <inlineHelpText>The description for the filter</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>