force-app/main/default/objects/Apttus__SearchFilter__c/fields/Apttus__PeopleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PeopleType__c</fullName>
    <description>The people type</description>
    <label>People Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Following</fullName>
            </value>
            <value>
                <fullName>Followers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>