force-app/main/default/objects/Apttus__SearchFilter__c/fields/Apttus__SearchType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SearchType__c</fullName>
    <description>The search type</description>
    <label>Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Files</fullName>
            </value>
            <value>
                <fullName>Attachments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>