force-app/main/default/objects/Apttus__SearchFilter__c/fields/Apttus__SObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SObjectName__c</fullName>
    <description>The sobject to query</description>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>